reactivated tests UI