@@ -27,10 +27,7 @@
         <artifactId>tycho-source-plugin</artifactId>
       </plugin>   
 
-
-	<!-- TODO reactivate tests when working on Hudson -->
-
-      <!-- <plugin>
+      <plugin>
       <groupId>org.eclipse.tycho</groupId>
       <artifactId>tycho-surefire-plugin</artifactId>
       <version>${tycho-version}</version>
@@ -46,25 +43,8 @@
       <testFailureIgnore>true</testFailureIgnore>
 
       </configuration>
-      </plugin> -->
-      
-      <plugin>
-      <groupId>org.eclipse.tycho</groupId>
-      <artifactId>tycho-surefire-plugin</artifactId>
-      <version>${tycho-version}</version>
-      <configuration>
-      <includes>
-      <include>org/eclipse/mylyn/docs/intent/client/ui/test/util/DummyTest.class</include>
-      </includes>
-      <useUIHarness>false</useUIHarness>
-      <useUIThread>false</useUIThread>
-      <argLine>-Xmx1024m</argLine>
-      <argLine>-XX:MaxPermSize=256m</argLine>
-      <testIgnoreFailure>true</testIgnoreFailure>
-      <testFailureIgnore>true</testFailureIgnore>
-
-      </configuration>
       </plugin>
+      
     </plugins>
   </build>
 
